--- a/a/microservicos/students-service/src/main/resources/application.properties
+++ b/a/microservicos/students-service/src/main/resources/application.properties
@@ -1,6 +1,8 @@
+spring.application.name=student_mark_service
+
 #Data Source Properties
 spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/school_db?createDatabaseIfNotExist=true
+spring.datasource.url = jdbc:mysql://localhost:3310/school_db?createDatabaseIfNotExist=true
 spring.datasource.username = root
 spring.datasource.password = 12345
 
@@ -20,3 +22,13 @@ logging.level.blog = WARN
 #Show SQL executed with parameter bindings
 logging.level.org.hibernate.SQL = DEBUG
 logging.level.org.hibernate.type.descriptor = TRACE
+
+# To eureka service discover
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.instance.hostname=localhost
+
+# Change port number
+server.port=8082
+
+#Put all endpoints in /api/v1/...
+server.servlet.context-path=/api/v1
