--- a/a/microservicos/town-service/src/main/resources/application.properties
+++ b/a/microservicos/town-service/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.application.name=town_service
+
 #Data Source Properties
 spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
 spring.datasource.url = jdbc:mysql://localhost:3308/school_db?createDatabaseIfNotExist=true
@@ -20,3 +22,14 @@ logging.level.blog = WARN
 #Show SQL executed with parameter bindings
 logging.level.org.hibernate.SQL = DEBUG
 logging.level.org.hibernate.type.descriptor = TRACE
+
+# To eureka service discover
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.instance.hostname=localhost
+
+# Change port number
+server.port=8081
+
+#Put all endpoints in /api/v1/...
+server.servlet.context-path=/api/v1
+
