mais algumas alteracoes

--- a/c/microservicos/discovery_server/src/main/resources/application.properties
+++ b/c/microservicos/discovery_server/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=discoveryserver
 
-eureka.instance.hostname=host.docker.internal
+eureka.instance.hostname=localhost
 #Not register own register server into the discovery service
 eureka.client.register-with-eureka=false
 #
