--- a/c/microservicos/api_gateway/src/main/resources/application.properties
+++ b/c/microservicos/api_gateway/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=apigateway
 
 #http://eureka:password@localhost:8761/eureka
-eureka.client.serviceUrl.defaultZone=http://host.docker.internal:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 eureka.client.eurekaServerUrlContext=/eureka
 
 logging.level.root=trace
