--- a/c/microservicos/club_service/src/main/resources/application.properties
+++ b/c/microservicos/club_service/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=clubservice
 
 #Data Source Properties
 spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://host.docker.internal:3311/school_db?createDatabaseIfNotExist=true
+spring.datasource.url = jdbc:mysql://localhost:3311/school_db?createDatabaseIfNotExist=true
 spring.datasource.username = root
 spring.datasource.password = 12345
 
@@ -24,8 +24,8 @@ logging.level.org.hibernate.SQL = DEBUG
 logging.level.org.hibernate.type.descriptor = TRACE
 
 # To eureka service discover
-eureka.client.service-url.defaultZone=http://host.docker.internal:8761/eureka
-eureka.instance.hostname=host.docker.internal
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.instance.hostname=localhost
 
 # Change port number
 server.port=8084
