--- a/c/microservicos/saga_orchestrator/src/main/resources/application.properties
+++ b/c/microservicos/saga_orchestrator/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=sagaorchestrator
 
 #Data Source Properties
 spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://host.docker.internal:3306/dont_use?createDatabaseIfNotExist=true
+spring.datasource.url = jdbc:mysql://localhost:3306/dont_use?createDatabaseIfNotExist=true
 spring.datasource.username = root
 spring.datasource.password = 12345
 
@@ -30,5 +30,5 @@ server.port=8090
 server.servlet.context-path=/api/v1
 
 # To eureka service discover
-eureka.client.service-url.defaultZone=http://host.docker.internal:8761/eureka
-eureka.instance.hostname=host.docker.internal
+eureka.client.service-url.defaultZone=http://localhost8761/eureka
+eureka.instance.hostname=localhost
