--- a/c/microservicos/students_service/src/main/resources/application.properties
+++ b/c/microservicos/students_service/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=studentservice
 
 #Data Source Properties
 spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://host.docker.internal:3310/school_db?createDatabaseIfNotExist=true
+spring.datasource.url = jdbc:mysql://localhost:3310/school_db?createDatabaseIfNotExist=true
 spring.datasource.username = root
 spring.datasource.password = 12345
 
@@ -24,8 +24,8 @@ logging.level.org.hibernate.SQL = DEBUG
 logging.level.org.hibernate.type.descriptor = TRACE
 
 #Connect to eureka
-eureka.client.service-url.defaultZone=http://host.docker.internal:8761/eureka
-eureka.client.eureka-server-u-r-l-context=host.docker.internal
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.eureka-server-u-r-l-context=localhost
 
 #Put all endpoints in /api/v1/...
 server.servlet.context-path=/api/v1/
