--- a/c/microservicos/town_service/src/main/resources/application.properties
+++ b/c/microservicos/town_service/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=townservice
 
 #Data Source Properties
 spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://host.docker.internal:3308/school_db?createDatabaseIfNotExist=true
+spring.datasource.url = jdbc:mysql://localhost:3308/school_db?createDatabaseIfNotExist=true
 spring.datasource.username = root
 spring.datasource.password = 12345
 
@@ -31,7 +31,7 @@ server.servlet.context-path=/api/v1
 
 
 # To eureka service discover
-eureka.client.service-url.defaultZone=http://host.docker.internal:8761/eureka
-eureka.instance.hostname=host.docker.internal
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.instance.hostname=localhost
 
 
